# gold-price-direction-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py  schemas.py
app/api/: routes.py
app/services/: latest_prediction_service.py  model_service.py
artifacts/: evaluation_metrics.json  gold_direction_pipeline.joblib  model_comparison.csv  model_metrics.json  test_period_trades.csv  time_series_validation.json  training_metadata.json
data/processed/: gold_features.csv  gold_processed.csv
data/raw/: gold_hourly.csv
docs/: api.md  architecture.md  data_pipeline.md  evaluation.md  feature_engineering.md  model_training.md
src/data/: download.py  preprocess.py
src/features/: build_features.py
src/models/: cross_validate.py  evaluate.py  model_factory.py  predict.py  train.py  validate.py
tests/: test_api.py  test_download.py  test_features.py  test_health.py  test_predict.py  test_preprocess.py  test_time_series_split.py  test_train.py  test_validate.py
